--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
-header {
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cabecalho {
     background-color: #A9C2C9;
     color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
 }
 
 .logo-topo{
-width: 20%;
+width: 15%;
+}
+
+.lista-item-topo{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
 }
